Note that this file only includes changes since Ice 3.2.1. For the
change history of prior releases, refer to the CHANGES file in the
subdirectory of each language mapping (e.g., cpp/CHANGES).


======================================================================
Changes since version 3.5.1
======================================================================


General Changes
===============

- Added Ice.Default.Timeout property to the set the timeout for
  stringified proxy endpoint that do not have timeout explicitly set.
  The default setting for the property is 60 seconds. It is also now
  possible to set an infinite timeout using "-t infinite" in the 
  endpoint configuration.

- Added Ice.Default.SourceAddress property and --sourceAddress
  endpoint setting to control the interface used for the outgoing
  connection.

- The signatures of Ice::OutputStream startSize() and endSize() have
  been modified. It is now necessary for the caller of startSize() to
  save the returned position and pass it into endSize().

- Added IceStormAdmin.Host and IceStormAdmin.Port properties. You can
  set these properties to connect to an IceStorm instance running on
  a given host and port.

- Added IceStorm finder interface (in the IceStorm/IceStorm.ice slice
  file) to enable clients to easily find the proxy of the topic
  manager with just the endpoint information of the IceStorm
  service. The client doesn't have to know the instance name.
  
  IceStorm provides an Ice object with the identity `IceStorm/Finder'
  that implements this interface.

- Added support for IceGridDiscovery to the IceGrid administrative
  utilities. Also added IceGridAdmin.Host and IceGridAdmin.Port
  properties, you can set these properties to connect to an IceGrid
  registry running on a given host and port.

- Added Ice locator and router finder interfaces to enable clients to
  easily find proxies for the locator or router (in Ice/Locator.ice
  and Ice/Router.ice slice files).
